--- a/style.css
+++ b/style.css
@@ -19,6 +19,19 @@ body
 .container 
 {
     position: relative;
+    background: #2f363e;
+    /* min-height: 500px; */
+    border-radius: 20px;
+    border-top-left-radius: 225px;
+    border-top-right-radius: 225px;
+    box-shadow: 25px 25px 75px rgba(0,0,0,0.75),
+    10px 10px 70px rgba(0,0,0,0.25),
+    inset 5px 5px 10px rgba(0,0,0,0.5),
+    inset 5px 5px 20px rgba(0,0,0,0.2),
+    inset -5px -5px 15px rgba(0,0,0,0.75);
+    display: flex; 
+    justify-content: center;
+    align-items: center;
 }
 
 .clock 
@@ -26,6 +39,64 @@ body
     position: relative;
     width: 450px;
     height: 450px;
-    background: #ffc973;
-    box-shadow: 10px 50px 70px rgba(0,0,0,0,35);
+    background: #495ceb;
+    border-radius: 50%;
+    box-shadow: 10px 50px 70px rgba(0,0,0,0.25),
+    inset 5px 5px 10px rgba(0,0,0,0.5),
+    inset 5px 5px 20px rgba(0,0,0,0.2),
+    inset -5px -5px 15px rgba(0,0,0,0.75);
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.clock::before 
+{
+    content:' ';
+    position: absolute;
+    width: 8px; 
+    height: 8px;
+    background: #2f363e;
+    border: 3px solid #fff;
+    border-radius: 50%;
+}
+
+.clock span
+{
+    position: absolute;
+    inset: 20px;
+    color: #fff;
+    text-align: center;
+    transform: rotate(calc(30deg * var(--i)));
+}
+
+.clock span b 
+{
+    font-size: 2em;
+    opacity: 0.25;
+    font-weight: 600;
+    display: inline-block;
+    transform: rotate(calc(30deg * var(--i)));
+}
+
+.circle 
+{
+    position: absolute;
+    width: 300px; 
+    height: 300px;
+    border: 2px solid rgba(0,0,0,0.25);
+    border-radius: 50%;
+}
+
+.circle2
+{
+    width: 240px;
+    height: 240px;
+}
+
+.circle3
+{
+    width: 180px;
+    height: 180px;
 }
